Fix img overflow

--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,10 @@ pre {
     tab-size: 4;
 }
 
+img {
+	max-width: 100%;
+}
+
 /* status color */
 
 /*
